[package]
name = "brane-weave"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
branec = { path = "BraneScript/compiler/branec" }
subsecond = "0.7.0-alpha.1"
dioxus-devtools = "0.7.0-alpha.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
